add quick links

--- a/src/pages/sorin-istrail/index.astro
+++ b/src/pages/sorin-istrail/index.astro
@@ -84,6 +84,20 @@ const essays = [
 ---
 
 <Layout title="Istrail Lab | Sorin Istrail">
+    <aside class="xl:flex flex-col gap-4 py-20 fixed hidden left-[5%] w-48">
+        <h3 class="text-lg font-bold">Quick Links</h3>
+        <a class="underline hover:text-blue-400" href=" publications"
+            >Publications</a
+        >
+        <a class="underline hover:text-blue-400" href=" sorin-istrail grants"
+            >Grants</a
+        >
+        <a class="underline hover:text-blue-400" href=" essays">Essays</a>
+        <a
+            class="underline hover:text-blue-400"
+            href=" sorin-istrail geneaology">Advisor Geneaology</a
+        >
+    </aside>
     <div class="grid md:grid-cols-2 p-4">
         <div class="flex flex-col items-center">
             <img src={istrail} alt="Sorin Istrail" />
