--- a/src/pages/sorin-istrail/index.astro
+++ b/src/pages/sorin-istrail/index.astro
@@ -4,6 +4,8 @@ import BlockQuote from "@/components/BlockQuote";
 import PositionCard from "@/components/PositionCard";
 import EssayCard from "@/components/EssayCard";
 import HonorRollList from "@/components/honorRoll/HonorRollList";
+import QuickLinks from "@/components/QuickLinks";
+
 import { students } from "@/components/honorRoll/honorRoll";
 import { type Award, AwardCard } from "@/components/AwardCard";
 
@@ -119,20 +121,7 @@ const awards: Award[] = [
 ---
 
 <Layout title="Istrail Lab | Sorin Istrail">
-    <aside class="xl:flex flex-col gap-4 py-20 fixed hidden left-[5%] w-48">
-        <h3 class="text-lg font-bold">Quick Links</h3>
-        <a class="underline hover:text-blue-400" href="/publications"
-            >Publications</a
-        >
-        <a class="underline hover:text-blue-400" href="/sorin-istrail/grants"
-            >Grants</a
-        >
-        <a class="underline hover:text-blue-400" href="/essays">Essays</a>
-        <a
-            class="underline hover:text-blue-400"
-            href="/sorin-istrail/geneaology">Advisor Geneaology</a
-        >
-    </aside>
+    <QuickLinks />
     <div class="grid md:grid-cols-2 p-4">
         <div class="flex flex-col items-center">
             <img src={istrail} alt="Sorin Istrail" />
