--- a/src/components/navigation/Navbar.astro
+++ b/src/components/navigation/Navbar.astro
@@ -1,5 +1,6 @@
 ---
-import NavDropdown from "./NavDropdown.astro";
+// import { NavDropdown } from "./NavDropdown";
+import NavLinks from "./NavLinks";
 import { dropdowns } from "./dropdowns";
 ---
 
@@ -7,7 +8,7 @@ import { dropdowns } from "./dropdowns";
     <div class="flex-1 px-2 mx-2">
         <a class="btn btn-ghost normal-case text-xl" href="/">Istrail Lab</a>
     </div>
-    <div class="flex-none lg:hidden">
+    <div class="flex-none xl:hidden">
         <label for="nav-drawer" class="btn btn-square btn-ghost">
             <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -22,18 +23,9 @@ import { dropdowns } from "./dropdowns";
             >
         </label>
     </div>
-    <div class="flex-none hidden lg:block">
-        <ul class="menu menu-horizontal px-1">
-            <li>
-                <a href="/sorin-istrail">Sorin Istrail</a>
-            </li>
-            {dropdowns.map((dropdown) => <NavDropdown {...dropdown} />)}
-            <li>
-                <a href="/essays">Essays</a>
-            </li>
-            <li>
-                <a href="/publications">Publications</a>
-            </li>
+    <div class="flex-none hidden xl:block">
+        <ul class="menu menu-horizontal px-1 text-base">
+            <NavLinks />
         </ul>
     </div>
 </div>
