update navbar and add carousel

--- a/src/components/navigation/Footer.astro
+++ b/src/components/navigation/Footer.astro
@@ -1,4 +1,6 @@
-<footer class="footer items-center p-4 bg-neutral text-neutral-content mt-20">
+<footer
+    class="flex justify-center items-center p-4 bg-neutral text-neutral-content mt-20 text-sm"
+>
     <div class="items-center grid-flow-col">
         <p>Copyright Istrail Lab © 2023 - All right reserved</p>
     </div>
