--- a/src/components/navigation/Navbar.astro
+++ b/src/components/navigation/Navbar.astro
@@ -1,31 +1,13 @@
 ---
-// import { NavDropdown } from "./NavDropdown";
-import NavLinks from "./NavLinks";
-import { dropdowns } from "./dropdowns";
+import NavSidebar from "./NavSidebar";
 ---
 
-<div class="w-full navbar bg-base-300">
+<div class="w-full flex items-center bg-base-300 px-2 py-3">
     <div class="flex-1 px-2 mx-2">
-        <a class="btn btn-ghost normal-case text-xl" href="/">Istrail Lab</a>
+        <a
+            class="no-underline text-black font-bold text-xl px-2 py-2 rounded-lg hover:bg-[#1F293733]"
+            href="/">Istrail Lab</a
+        >
     </div>
-    <div class="flex-none xl:hidden">
-        <label for="nav-drawer" class="btn btn-square btn-ghost">
-            <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                class="inline-block w-6 h-6 stroke-current"
-                ><path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M4 6h16M4 12h16M4 18h16"></path></svg
-            >
-        </label>
-    </div>
-    <div class="flex-none hidden xl:block">
-        <ul class="menu menu-horizontal px-1 text-base">
-            <NavLinks />
-        </ul>
-    </div>
+    <NavSidebar client:load />
 </div>
