update position title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,8 +27,8 @@ import Carousel from "@/components/Carousel";
         The Istrail Lab is a computational biology and computer science research
         group in the Department of Computer Science at Brown University. It is
         part of the Center for Computational Molecular Biology at Brown
-        University. Sorin Istrail is the Julie Nguyen Brown Professor of
-        Computational and Mathematical Sciences and Professor of Computer
+        University. Sorin Istrail is the James A. and Julie N. Brown Professor
+        of Computational and Mathematical Sciences and Professor of Computer
         Science at Brown University.
     </p>
 
