--- a/src/pages/sorin-istrail/index.astro
+++ b/src/pages/sorin-istrail/index.astro
@@ -73,7 +73,7 @@ const awards: Award[] = [
         desc: "Alexandru Ioan Cuza University, Iasi, Romania",
     },
     {
-        title: "Julie Nguyen Brown Professor of Computational and Mathematical Sciences",
+        title: "James A. and Julie N. Brown Professor of Computational and Mathematical Sciences",
         year: 2006,
         desc: "Brown University, Providence, Rhode Island",
     },
@@ -131,8 +131,8 @@ const awards: Award[] = [
             class="flex flex-col items-center justify-center text-center gap-2"
         >
             <h2 class="font-bold" style="text-wrap: balance">
-                Julie Nguyen Brown Professor of Computational and Mathematical
-                Sciences
+                James A. and Julie N. Brown Professor of Computational and
+                Mathematical Sciences
             </h2>
             <h2 class="font-bold">Professor of Computer Science</h2>
             <div class="text-xs">
@@ -156,11 +156,11 @@ const awards: Award[] = [
     </BlockQuote>
 
     <p class="p-2">
-        Sorin Istrail is the Julie Nguyen Brown Professor of Computational and
-        Mathematical Sciences and Professor of Computer Science, and former
-        Director of the Center for Computational Molecular Biology at Brown
-        University. He is Professor Honoris Causa of the Alexandru Ioan Cuza
-        University, Iasi, Romania.
+        Sorin Istrail is the James A. and Julie N. Brown Professor of
+        Computational and Mathematical Sciences and Professor of Computer
+        Science, and former Director of the Center for Computational Molecular
+        Biology at Brown University. He is Professor Honoris Causa of the
+        Alexandru Ioan Cuza University, Iasi, Romania.
     </p>
     <p class="p-2">
         Before joining Brown, he was the Senior Director and Head of Informatics
