--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,6 @@ const { title } = Astro.props;
 import Navbar from "../components/navigation/Navbar.astro";
 import Footer from "../components/navigation/Footer.astro";
 import "../styles/globals.css";
-import { Worker } from "@react-pdf-viewer/core";
 ---
 
 <!DOCTYPE html>
@@ -21,7 +20,7 @@ import { Worker } from "@react-pdf-viewer/core";
         <meta name="generator" content={Astro.generator} />
         <title>{title}</title>
     </head>
-    <body class="h-full">
+    <body class="flex flex-col h-full">
         <Navbar />
         <div class="flex-1">
             <main style="max-width: min(100ch, 100% - 4rem)" class="mx-auto">
