fix build problems by using client:only='react' for mui components

--- a/src/components/navigation/Navbar.astro
+++ b/src/components/navigation/Navbar.astro
@@ -9,5 +9,5 @@ import NavSidebar from "./NavSidebar";
             href="/">Istrail Lab</a
         >
     </div>
-    <NavSidebar client:load />
+    <NavSidebar client:only="react" />
 </div>
