use ruffle to embed swf, but having some trouble so get back to this

--- a/src/pages/research/ising-model.astro
+++ b/src/pages/research/ising-model.astro
@@ -95,7 +95,164 @@ Kasteleyn, Temperley, Green, Hurst and more recently Barahona:`;
             </p>
         </Abstract>
     </div>
-    <BlockQuote slot="quote" author="Sorin Istrail" journal="">
+
+    <div slot="quote" class="grid gap-2">
+        <BlockQuote
+            author="H. N. V. Temperley"
+            journal="Two-dimensional Ising Models (Phase transitions and critical phenomena 1974)"
+        >
+            <div class="grid gap-2">
+                <p>
+                    No physically interesting nonplanar lattice has been solved
+                    completely as yet. The simplest such lattice is the plane
+                    square lattice with interactions along the diagonals as well
+                    as the sides of the squares, sometimes called the union jack
+                    lattice. It is somewhat melancholy thought that nearly
+                    twenty-four years of work has added relatively little to our
+                    knowledge of analytical properties of the Onsager Ising
+                    model itself, though we now have a great deal more
+                    information deduced from series expansions.
+                </p>
+                <p>
+                    With monotonous regularity, each method has reproduced
+                    virtually the same results as those listed above and has
+                    added virtually no new ones on the analytical side. This
+                    information may be summarized as knowledge for planar
+                    lattices but not for any interesting nonplanar lattice of
+                    the partition function and correlations as a function of
+                    temperature in zero magnetic field, together with the
+                    spontaneous magnetization and various boundary and impurity
+                    effects. It relates either the trace of vacuum to vacuum
+                    expectation of a product of linear sums of operators known
+                    as Cliord or Fermi operators to what is known mathematically
+                    as a Pfaan.
+                </p>
+                <p>
+                    This experience is almost unique in mathematical physics.
+                    Nearly always a valid new treatment of a problem produces
+                    new results as well as reproducing old ones.
+                </p>
+            </div>
+        </BlockQuote>
+        <BlockQuote
+            author="B. M. McCoy and T. T. Wu"
+            journal="The Two-Dimensional Ising Model (Harvard University Press 1973)"
+        >
+            <div class="grid gap-2">
+                <p>
+                    Conspicuously missing from the table of open problems are
+                    the calculation of the free energy of the two-dimensional
+                    Ising model when H is non-zero, and the calculation of the
+                    free energy of the three-dimensional Ising model. This
+                    omission is intentional. These two problems are both
+                    extremely difficult. Indeed, they have existed for a quarter
+                    of a century, and absolutely no progress has been made. By
+                    no progress, we mean no progress toward an explicit
+                    solution.
+                </p>
+            </div>
+        </BlockQuote>
+        <BlockQuote
+            author="Mark Kac"
+            journal="Enigmas of Chance (Harper and Row 1985)"
+        >
+            <div class="grid gap-2">
+                <p>
+                    The three-dimensional case does exhibit a phase transition,
+                    but exact calculation of its properties has proved
+                    hopelessly difficult. The two-dimensional case for so-called
+                    nearest-neighbor interactions was solved by Lars Onsager. In
+                    Onsager's solution, a veritable tour de force of
+                    mathematical ingenuity and inventiveness, he uncovered a
+                    number of surprising features and started a series of
+                    investigations which continue to this day.
+                </p>
+                <p>
+                    The solution was difficult to understand, and George
+                    Uhlenbeck urged me to try to simplify it. <strong
+                        >"Make it human," was the way he put it</strong
+                    >. At the Institute for Advanced Studies at Princeton, I met
+                    John C. Ward, and we succeeded in rederiving Onsager's
+                    result. Our success was in large measure due to knowing the
+                    answer; we were, in fact, guided by this knowledge. But our
+                    solution turned out to be incomplete. It took several years
+                    and the effort of several people before the gap in the
+                    derivation was filled. Even Feynman got into the act. He
+                    attended two lectures I gave at CalTech and came up with the
+                    clearest and sharpest formulation of what was needed to fill
+                    the gap. <strong
+                        >The only time I have ever seen Feynman taking notes was
+                        during the two lectures. Usually, he is miles ahead of
+                        the speaker, but following combinatorial arguments is
+                        difficult for all mortals</strong
+                    >.
+                </p>
+            </div>
+        </BlockQuote>
+        <BlockQuote
+            author="Richard Feynman"
+            journal="Lectures on Statistical Mechanics (Addison-Wesley 1972)"
+        >
+            <div class="grid gap-2">
+                <p>
+                    The exact solution for three dimensions has not yet been
+                    found.
+                </p>
+            </div>
+        </BlockQuote>
+        <BlockQuote
+            author="C. A. Hurst"
+            journal="Relation between the Onsager and Pfaffian methods for Solving the Ising Problem (Journal of Mathematical Physics 1965)"
+        >
+            <div class="grid gap-2">
+                <p>
+                    It has been rather puzzling that the two methods at present
+                    known for finding exact solutions for the Ising problem,
+                    namely the algebraic method of Onsager and the combinatorial
+                    method employing Pfaans, have exactly the same range of
+                    application, although they appear so different in approach.
+                    Problems which yield to one method yield to the other,
+                    whilst problems which are not tractable by one approach also
+                    fail to be exactly solved by the other, although the reasons
+                    for this failure appear to have completely different
+                    mathematical origins.
+                </p><p>
+                    On the one hand, Ising problems which cannot be solved by
+                    the Pfaan method are characterized by the appearance of
+                    crossed bonds, which produce unwanted negative signs in the
+                    combinatorial generating functions, and such crossed bonds
+                    are usually manifestations of the topological structure of
+                    the lattice being investigated, i.e., the three-dimensional
+                    cubic lattice.
+                </p>
+                <p>
+                    On the other hand, the Onsager approach breaks down because
+                    the Lie algebra encountered in the process of solution
+                    cannot be decomposed into sufficiently simple algebra. It is
+                    usually stated that such more complicated algebras occur
+                    only when the corresponding lattice has crossed bonds,
+                    although an explicit proof of this fact does not appear to
+                    be published. It is difficult to see why the two methods
+                    have exactly the same limitations.
+                </p>
+            </div>
+        </BlockQuote>
+    </div>
+    <BlockQuote
+        author="P. W. Kasteleyn"
+        journal="The Statistics of Dimers on a Lattice. (Physica 1961)"
+    >
+        <div class="grid gap-2">
+            <p>
+                The dimer problem and the Ising problem were finally solved for
+                planar lattice graphs only. It was found that a generalization
+                to nonplanar lattice graphs, including all three-dimensional
+                lattice graphs, is impossible unless the number of Pfaans
+                involved is allowed to increase to intractably large numbers.
+            </p>
+        </div>
+    </BlockQuote>
+    <BlockQuote author="Sorin Istrail" journal="">
         <p>
             How famous physicists and mathematicians commented in the 1950-1960s
             on an NP-complete problem before the concept of NP-completeness was
