add sorin fest paragraph

--- a/src/pages/research/ising-model.astro
+++ b/src/pages/research/ising-model.astro
@@ -96,6 +96,33 @@ Kasteleyn, Temperley, Green, Hurst and more recently Barahona:`;
         </Abstract>
     </div>
 
+    <div slot="sorinfest">
+        <h3 class="text-2xl font-bold py-4">SorinFest</h3>
+        <p class="pb-8">
+            Lars Onsager, Brown University Professor of Chemistry from 1928-1933
+            and winner of the Nobel Prize for Chemistry in 1968. In 1944,
+            Onsager obtained the phase transition and exact solution for the 2D
+            planar Ising Model (Ising ferromagnetic 2D plane grid). His seminal
+            exact mathematical proof of the 2D planar Ising model partition
+            function formula is considered one of the most extraordinary
+            mathematical tour de force proofs in statistical physics. Answering
+            the call to “make [the proof] human”, a dream team of mathematicians
+            and physicists, including Kac, Ward, Feynman, Hurst, Kasteleyn, and
+            Temperley attempted until 1975 to generalize Onsager’s proof to
+            three dimensions, but without success. Kac and Ward, with
+            contributions from Feynman, obtained a combinatorial proof of the
+            Onsager theorem. In 2000, Sorin published the paper "Statistical
+            Mechanics, Three-Dimensionality and NP-completeness. I. Universality
+            of Intractability for the Partition Function of the Ising Model
+            Across Non-Planar Lattices" at the Symposium on the Theory of
+            Computing (STOC). His paper showed, for several Ising spin glass
+            models, that for every non-planar (and therefore every 3D) model,
+            computing the partition function is NP-complete. The proofs were
+            axiomatic: Non-planarity plus Translational Invariance implies
+            NP-completeness.
+        </p>
+    </div>
+
     <div slot="quote" class="grid gap-2">
         <BlockQuote
             author="H. N. V. Temperley"
