--- a/src/pages/essays.astro
+++ b/src/pages/essays.astro
@@ -100,10 +100,10 @@ const essays: Publication[] = [
 ---
 
 <Layout title="Istrail Lab | Essays">
-    <h2 class="flex-1 text-3xl font-bold pt-8">Axioms</h2>
+    <h2 class="flex-1 text-3xl font-bold pt-8">Essays: Axiom Series</h2>
     <div class="grid gap-6 py-4">
         <div>
-            <h3 class="flex-1 text-2xl font-bold">John von Neumann</h3>
+            <h3 class="flex-1 text-2xl font-bold">John von Neumann's Axioms</h3>
             <div class="py-4">
                 <EssayCard
                     publication={{
@@ -120,7 +120,7 @@ const essays: Publication[] = [
         </div>
 
         <div>
-            <h3 class="flex-1 text-2xl font-bold">Eric Davidson</h3>
+            <h3 class="flex-1 text-2xl font-bold">Eric Davidson's Axioms</h3>
             <div class="py-4">
                 <EssayCard
                     publication={{
@@ -137,7 +137,7 @@ const essays: Publication[] = [
         </div>
 
         <div>
-            <h3 class="flex-1 text-2xl font-bold">Michael Waterman</h3>
+            <h3 class="flex-1 text-2xl font-bold">Michael Waterman's Axioms</h3>
             <div class="py-4">
                 <EssayCard
                     publication={{
@@ -156,7 +156,9 @@ const essays: Publication[] = [
         </div>
 
         <div>
-            <h3 class="flex-1 text-2xl font-bold">Edsger W. Dijkstra</h3>
+            <h3 class="flex-1 text-2xl font-bold">
+                Edsger W. Dijkstra's Axioms
+            </h3>
             <div class="grid gap-4 py-4">
                 <EssayCard
                     publication={{
@@ -184,7 +186,7 @@ const essays: Publication[] = [
         </div>
 
         <div>
-            <h3 class="flex-1 text-2xl font-bold">Solomon Marcus</h3>
+            <h3 class="flex-1 text-2xl font-bold">Solomon Marcus's Axioms</h3>
             <div class="py-4"></div>
         </div>
 
